syntax = "proto3";

package JT808.GrpcDashbord.ServiceGrpcBase;

// 空请求
message EmptyRequest{
    
}