syntax = "proto3";

package JT808.GrpcDashbord.ServiceGrpcBase;

// 统一回复
message ResultReply{
    // 状态码
	enum StatusCode{
		Success = 0;
		NoContent = 1;
		Failure = 2;
		Unauthorized=3;
		InnerError = 4;
	}
    StatusCode Code=1;
    string Msg=2;
}